--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,9 @@
-h1 {
-      color: white;
-      background: #676767;
-      font-size: 100px;
-      text-align: center;
+body {
+      background: #e6e6e6;
+}
+
+header {
+      background: #4d4d4d;
+      height: 400px;
+
 }
