--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,18 @@
-body {
-      background: #e6e6e6;
+#title {
+      color: blue;
+      font-size: 40px;
+      text-align: center;
 }
 
-header {
-      background: #4d4d4d;
-      height: 400px;
-
+.paragraph {
+      color: red;
+}
+#style1 {
+      font-size: 20px;
+}
+#style2 {
+      text-align: center;
+}
+#style3 {
+      font-weight: bold;
 }
