--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,16 @@
-body {
-      background-color: gray;
-      background-image: url('../img/background.jpg');
-      background-repeat: no-repeat;
-      background-position: center 100px;
-      height: 100%
+p {
+      /* text-align: left;*/
+      /*text-align: center;*/
+      /*text-align: right; */
+      text-align: justify;
+      direction: ltr;
+      /* direction: rtl; */
+      /* text-decoration: none; */
+      /* text-decoration: underline; */
+      /* text-decoration: line-through; */
+      text-decoration-color: red;
+      text-decoration-style: dotted;
+      text-indent: 50px;
+      text-shadow: 20px 8px 5px blue
+      
 }
