--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,14 @@
 p {
-      text-align: justify;
-      text-indent: 50px;
-      /* line-height: 5; */
-      /* letter-spacing: 8; */
-      /* letter-spacing: -2; */
-      /* text-transform: uppercase;*/
-      text-transform: lowercase;
-
+      /* single word font? */
+      /* font-family: tahoma; */
+      /* multiple word font needs quotes */
+      font-family: "Times New Roman"
+      /* if browser doesnt have one of these use the next */
+      font-family: arial, tahoma, "Times New Roman";
+      /* font-size: 20px; */
+      font-size: large;
+      font-style: italic;
+      /* font-weight: bold; */
+      font-weight: 400
 
 }
