--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,14 +1,12 @@
-p {
-      /* single word font? */
-      /* font-family: tahoma; */
-      /* multiple word font needs quotes */
-      font-family: "Times New Roman"
-      /* if browser doesnt have one of these use the next */
-      font-family: arial, tahoma, "Times New Roman";
-      /* font-size: 20px; */
-      font-size: large;
-      font-style: italic;
-      /* font-weight: bold; */
-      font-weight: 400
+a {
+      color: red;
+      padding: 20px
+}
 
+a:hover {
+      color: gray;
+}
+
+a:visited {
+      color: green;
 }
