--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,16 +3,9 @@
       text-align: center;
       font-size: 50px;
       padding: 40px;
-}
+      /* border-width: 20px 5px; */
+      /* border-color: brown yellow orange blue; */
+      /* border-style: solid dashed double dotted */
+      border: 20px solid brown;
 
-.box2 {
-      background-color: blue;
-      text-align: center;
-      font-size: 50px;
-      /* padding-top: 50px;
-      padding-right: 50px;
-      padding-bottom: 100px;
-      padding-left: 50px; */
-      /* padding: 100px 50px 100px 50px; */
-      padding: 100px 50px;
 }
