--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,9 +3,7 @@
       text-align: center;
       font-size: 50px;
       padding: 40px;
-      /* border-width: 20px 5px; */
-      /* border-color: brown yellow orange blue; */
-      /* border-style: solid dashed double dotted */
       border: 20px solid brown;
+      margin: -50px 100px 20px 0px;
 
 }
