--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,53 +1,31 @@
-body {
-      height: 2000px;
-}
-
-.box {
-      background-color: gray;
-      color: white;
-      font-size: 30px;
-      padding: 20px;
-      width: 100px;
-      /* position: static; */
-      /* position: relative; */
-      top: 100px;
-      /* HTML objects are static by default and thus the black box moves according to .box */
-
-}
-
 .box1 {
       background-color: black;
-      height: 500px;
-      width: 500px;
-      position: relative;
-      bottom: 100px;
-      left: 200px;
-
-
-}
-
-
-
-.parent {
-      background-color: black;
-      height: 500px;
-      width: 500px;
-      position: relative;
-      /* parent has to be relative inorder to control the movement of the child */
-      bo
-}
-
-
-.child {
-      background-color: gray;
-      color: white;
-      font-size: 30px;
-      padding: 20px;
-      width: 100px;
-      top: 100px;
-      right: 50px;
-      /* position: fixed; */
+      height: 300px;
+      width: 300px;
       position: absolute;
-      bottom: 200px;
+      top: 10;
+      left: 10;
+      z-index: -1
+}
+
+.box2 {
+      background-color: red;
+      height: 300px;
+      width: 300px;
+      position: absolute;
+      top: 40px;
+      left: 40px;
+      z-index: 1
+      /* the greater value goes on top */
+
+}
+
+.box3 {
+      background-color: gray;
+      height: 300px;
+      width: 300px;
+      position: absolute;
+      top: 70px;
+      left: 70px;
 
 }
