--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,31 +1,17 @@
-.box1 {
-      background-color: black;
-      height: 300px;
-      width: 300px;
-      position: absolute;
-      top: 10;
-      left: 10;
-      z-index: -1
-}
-
-.box2 {
-      background-color: red;
-      height: 300px;
-      width: 300px;
-      position: absolute;
-      top: 40px;
-      left: 40px;
-      z-index: 1
-      /* the greater value goes on top */
+.box {
+      background-color: green;
+      width: 100px;
+      padding: 50px;
+      margin: 10px;
+      font-size: 30px;
+      color: white;
+      float: left;
+      /* box2,3 and 4 float left of the paragraph */
+      /* float: right; */
+      /* box1 stays in right upper corner */
 
 }
 
-.box3 {
-      background-color: gray;
-      height: 300px;
-      width: 300px;
-      position: absolute;
-      top: 70px;
-      left: 70px;
-
+.clear {
+      clear: both;
 }
