--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,78 +1,59 @@
+/*
+order: <integer>;  default is 0
+flex-grow: <number>; default 0
+flex-shrink: <number>; default 1
+flex-basis: <length> | auto; default auto
+flex: none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]
+*/
+
 
 body {
-  background: #ededed;
-  padding: 20px;
-
+     background: #ededed;
+     padding: 20px;
 }
 
 .container {
-    width: 1000px;
-    background: #fff;
-    padding: 20px;
-    font-size: 30px;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    /* flex-direction: row-reverse; */
-    /* flex-direction: column; */
-    /* flex-direction: column-reverse; */
-    /* flex-wrap: nowrap; */
-    /* flex-wrap: wrap */
-    /* flex-wrap:nowrap; */
-    /*instead of using both flex-direction and flex-wrap, can simplify to flex-flow*/
-    flex-flow: row wrap;
-    /* row and wrap are separate properties */
-    /* justify-content: flex-start; */
-    /* justify-content: flex-end; */
-    /* justify-content: center; */
-    /* height: 500px;  */
-    /* justify-content: space-around; */
-    /* justify-content: space-between; */
-    /* align-self Aligns items vertically */
-    /* Aligns items w/ align-self to center of container */
-    /* align-self: center; */
-    /* Aligns items to top left*/
-    /* align-self: flex-start; */
-    /* Aligns items to bottom left */
-    /* align-items: flex-end; */
-    /* Aligns items to fill container, which is default */
-    /* align-self: stretch; */
-    /* Aligns items so that their middle/baseline aligns centered */
-      /* align-self: baseline; */
-
-
-
+     background: #fff;
+     padding: 20px;
+     font-size: 30px;
+     margin: auto;
+     display: flex;
 }
 
 .items {
- /* width: 300px;
- height: 200px; */
-
+     flex-basis: 200px;
+     height: 200px;
 }
 
 .item1 {
-  background-color: #0ff;
+     background-color: #0ff;
+     order: 3;
+     flex-shrink: 2;
 }
 
 .item2 {
-  background-color: #f0f;
-
-
+     background-color: #f0f;
+     order: 4;
+     flex-shrink: 1;
 }
 
 .item3 {
-  background-color: #a11;
+     background-color: #a11;
+     order: 1;
+     flex-shrink: 3;
 }
 
 .item4 {
-  background-color: #11a;
+     background-color: #11a;
+     order: 2;
 }
 
 .item5 {
-  background-color: #1a1;
-
+     background-color: #1a1;
+     order: 5;
 }
 
 .item6 {
-  background-color: #aaa;
+     background-color: #aaa;
+     order: 6;
 }
